fix: spacing, add one comment

--- a/assets/style.css
+++ b/assets/style.css
@@ -236,9 +236,10 @@ main {
         justify-content: center;
         /* CONTROLLA: cambia il gap nella versione responsive */
         gap: 1rem 3rem;
-        padding-top: 1rem;
+        padding-top: .5rem;
 
         li {
+            padding: .5rem;
 
             a {
                 color: var(--font-colour);
@@ -246,7 +247,7 @@ main {
             }
         }
 
-        /* CONTROLLA */
+        /* CONTROLLA: misura del border, ofrse un hr è meglio in questo caso */
         li:first-child {
             border-bottom: 2px solid var(--hover);
         }
